--- a/ProcessWatcher.Language/Resources/Language.resx
+++ b/ProcessWatcher.Language/Resources/Language.resx
@@ -18,4 +18,13 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="ProcessStarted" xml:space="preserve">
+        <value />
+    </data>
+    <data name="ProcessStopped" xml:space="preserve">
+        <value />
+    </data>
+    <data name="ProcessManuallyStopped" xml:space="preserve">
+        <value />
+    </data>
 </root>
