--- a/ProcessWatcher.Language/Resources/Language.resx
+++ b/ProcessWatcher.Language/Resources/Language.resx
@@ -147,4 +147,40 @@
   <data name="AutoRestartDeactivated" xml:space="preserve">
     <value>AutoRestarting Disabled</value>
   </data>
+  <data name="ConfirmDeleteMessage" xml:space="preserve">
+    <value>Clicking YES you will delete $CONTENT$ and Stop related process</value>
+  </data>
+  <data name="ConfirmDeleteTitle" xml:space="preserve">
+    <value>Are you sure?</value>
+  </data>
+  <data name="ProcessAddedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been added</value>
+  </data>
+  <data name="ProcessManuallyStoppedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been stopped manually</value>
+  </data>
+  <data name="ProcessRemovedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been stopped and removed</value>
+  </data>
+  <data name="ProcessRestartedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been restarted</value>
+  </data>
+  <data name="ProcessRestartingLog" xml:space="preserve">
+    <value>Process $CONTENT$ is restarting</value>
+  </data>
+  <data name="ProcessStartedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been started</value>
+  </data>
+  <data name="ProcessStoppedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been stopped</value>
+  </data>
+  <data name="ProcessUpdatedLog" xml:space="preserve">
+    <value>Process $CONTENT$ has been updated</value>
+  </data>
+  <data name="SetGroupKeyMessage" xml:space="preserve">
+    <value>Group Key for $CONTENT$</value>
+  </data>
+  <data name="SetGroupKeyTitle" xml:space="preserve">
+    <value>Set Group Key</value>
+  </data>
 </root>
